third commit thirsday

--- a/index.html
+++ b/index.html
@@ -1,35 +1,30 @@
 <html>
     <header>
         <link rel="stylesheet" href="design.css">
-        <title>Weather site</title>
+        <title>Weather website</title>
         <h1>Weather website</h1>
     </header>
     <body>
-        <div>
-            <p>Choose city:</p>
-            <select id="city">
-                <option value="Viborg">Viborg</option>
-                <option value="Århus">Århus</option>
-                <option value="København">København</option>
-                <option value="Randers">Randers</option>
-                <option value="Silkeborg">Silkeborg</option>
-                <option value="Holstebro">Holstebro</option>
-            </select>
-        </div>
-
-        <button  onclick="Weather(document.getElementById('city').value)">City confirm</button>
+        <p>Choose city:</p>
+        <select id="citySelection"></select>
+        <button  onclick="GetWeatherData(document.getElementById('citySelection').value)">Confirm</button>
         
         <table>
             <tr>
                 <td id="temp">Temp:</td>
-                <td id="temp_min">Temp_min:</td>
-                <td id="temp_max">Temp_max:</td>
+                <td id="temp_min">Temp min:</td>
+                <td id="temp_max">Temp max:</td>
             </tr>
-            <tr><td id="feels">Feels_like:</td>
+            <tr>
+                <td id="feels">Feels like:</td>
                 <td id="desc">Description:</td>
-                <td id="speed">Wind_speed:</td>
+                <td id="speed">Wind speed:</td>
             </tr>
         </table>
+        
+        <H2 id="main_weather">Main weather: </H2>
+        <img id="pic" src="">
+        <H2 id="time">Click me to see the time</H2>
     </body>
     <footer>
             <script src="weather.js"></script>
